# 4jlibs

./: meson.options
4J.Input/: 4J_Input.cpp  4J_Input.h
4J.Render/: 4J_Render.cpp  4J_Render.h  meson.build  stdafx.h
4J.Render/shaders/: fragment.frag  fragment_es.frag  vertex.vert  vertex_es.vert
builddef/: header_smoke.cpp  meson.build
